configs/my_firewall.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A TCP -p tcp -m tcp --dport 57621 -m comment --comment spotify -j ACCEPT
-A UDP -p udp -m udp --dport 57621 -m comment --comment spotify -j ACCEPT
-A UDP -p udp -m udp --sport 1900 --dport 1025:65535 -m comment --comment spotify -j ACCEPT
-A UDP -p udp -m udp --sport 5353 --dport 1025:65535 -m comment --comment spotify -j ACCEPT
-A UDP -p udp -m udp --dport 1714:1764 -m comment --comment kde-connect -j ACCEPT
-A TCP -p tcp -m tcp --dport 1714:1764 -m comment --comment kde-connect -j ACCEPT
COMMIT
